package org.fiuba.algoritmos3.tp1powechess.Model;

public interface Enrocable {
    public boolean puedeEnrocar();
}
