package main.java.org.fiuba.algoritmos3.tp1powechess.Model;

public class EstadoOcupado implements EstadoDeOcupacionCasillero {
    public boolean estaOcupado() {
        return true;
    }
}
